<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.fragments.OnBoardingFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/onboarding_bg"
        android:src="@drawable/dog" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/main"
        android:textSize="28sp"
        app:fontFamily="@font/nunito_bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:text="@string/welcome_desc"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:fontFamily="@font/nunito_regular" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="104dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAuth"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/auth"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/skip"
        android:textColor="@color/blue"
        android:textSize="16sp" />

</LinearLayout>