<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="16dp"
    android:id="@+id/content"
    android:paddingTop="16dp"
    tools:context=".ui.fragments.ExploreFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginStart="2dp"
        android:background="@drawable/circle_bg"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/alex_connors"
        android:textColor="@color/main"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:drawableEnd="@drawable/arrow_down"
        android:drawablePadding="4dp"
        android:drawableTint="@color/blue"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/foster_parent"
        android:textColor="@color/blue"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@+id/ivBurger"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:src="@drawable/frame_12__1_" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top|right"
            android:background="@drawable/notification_bg"
            android:gravity="center"
            android:src="@drawable/star"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBurger"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:src="@drawable/burger"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/let"
        android:textColor="@color/main"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/search_bg"
        android:drawableStart="@drawable/search_icon"
        android:drawablePadding="12sp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/search_here"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/main"
        android:textColorHint="@color/stroke_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFind" />

    <HorizontalScrollView
        android:id="@+id/svCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/category_bg"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:src="@drawable/filter" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/filterCats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/category_bg_selector"
                android:drawableEnd="@drawable/category_down_arrow"
                android:drawablePadding="4dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="@string/cats"
                android:textColor="@color/main"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/category_bg_selector"
                android:drawableEnd="@drawable/category_down_arrow"
                android:drawablePadding="4dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="@string/species"
                android:textColor="@color/main"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/category_bg_selector"
                android:drawableEnd="@drawable/category_down_arrow"
                android:drawablePadding="4dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="@string/size"
                android:textColor="@color/main"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/category_bg_selector"
                android:drawableEnd="@drawable/category_down_arrow"
                android:drawablePadding="4dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="@string/location"
                android:textColor="@color/main"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/category_bg_selector"
                android:drawableEnd="@drawable/category_down_arrow"
                android:drawablePadding="4dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="@string/age"
                android:textColor="@color/main"
                android:textSize="12sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svCategories" />

</androidx.constraintlayout.widget.ConstraintLayout>