<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.fragments.AuthFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivIllustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:src="@drawable/illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:fontFamily="@font/relaway_bold"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIllustration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/raleway_regular"
        android:gravity="center"
        android:text="@string/welcome_back_desc"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/appCompatEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/your_email"
        android:paddingHorizontal="20dp"
        android:paddingTop="19dp"
        android:paddingBottom="23dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/raleway_regular"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/appCompatEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:hint="@string/your_password"
        android:paddingHorizontal="20dp"
        android:paddingTop="19dp"
        android:paddingBottom="23dp"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_regular"
        android:textColorHint="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/btnLogin"
        android:fontFamily="@font/relaway_bold"
        android:backgroundTint="@color/green"
        android:text="@string/log_in"
        app:cornerRadius="20dp"
        android:paddingTop="17dp"
        android:paddingBottom="18dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>